--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <h1>
         Weather Sa
     </h1>
+    <footer>
+        Coded by 
+        <a href="https://github.com/Samela1209/"> Samela Mkondweni</a> code hosted on
+        <a href="https://github.com/Samela1209/Isimosezulu"> github</a> and website hosted on netlify
+        <a href="https://https://isimosezulu-app.netlify.app/"></a>
+    </footer>
 </body>
 </html>
