--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Coded by 
         <a href="https://github.com/Samela1209/"> Samela Mkondweni</a> code hosted on
         <a href="https://github.com/Samela1209/Isimosezulu"> github</a> and website hosted on netlify
-        <a href="https://https://isimosezulu-app.netlify.app/"></a>
+        <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general"></a>
     </footer>
 </body>
 </html>
