--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <footer>
         Coded by 
         <a href="https://github.com/Samela1209/"> Samela Mkondweni</a> code hosted on
-        <a href="https://github.com/Samela1209/Isimosezulu"> github</a> and website hosted on netlify
-        <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general"></a>
+        <a href="https://github.com/Samela1209/Isimosezulu"> github</a> and website hosted on
+        <a href="https://isimosezulu-app.netlify.app/">netlify</a>
     </footer>
 </body>
 </html>
