--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <footer>
         Coded by 
         <a href="https://github.com/Samela1209/"> Samela Mkondweni</a> code hosted on
-        <a href="https://github.com/Samela1209/Isimosezulu"> github</a>
-        <a href="https://isimosezulu-app.netlify.app/"> </a>on netlify
+        <a href="https://github.com/Samela1209/Isimosezulu"> github</a> and website hosted
+        <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general"> on netlify</a>
     </footer>
 </body>
 </html>
