Added links to the footer

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </h1>
     <footer>
         Coded by 
-        <a href="https://github.com/Samela1209/"> Samela Mkondweni</a> code hosted on
-        <a href="https://github.com/Samela1209/Isimosezulu"> github</a> and website hosted
-        <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general"> on netlify</a>
+        <a href="https://github.com/Samela1209/" target="_blank"> Samela Mkondweni</a> code hosted on
+        <a href="https://github.com/Samela1209/Isimosezulu" target="_blank"> github</a> and website hosted
+        <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general" target="=_blank"> on netlify</a>
     </footer>
 </body>
 </html>
