--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter your city..." required/>
+            <input type="submit" value="Search"/>
+        </form>
+    </header>
+    <main>
     <h1>
         Weather Sa
     </h1>
+    </main>
     <footer>
-        Coded by 
+        This project was coded by 
         <a href="https://github.com/Samela1209/" target="_blank"> Samela Mkondweni</a> code hosted on
         <a href="https://github.com/Samela1209/Isimosezulu" target="_blank"> github</a> and website hosted
         <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general" target="=_blank"> on netlify</a>
