Added main and header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     </header>
     <main>
     <h1>
-        Weather Sa
+        East London
     </h1>
+    <p>
+        Saturday 14:25, Sunny</br>
+        Humidity:57%, Wind:32km/h
+    </p>
     </main>
     <footer>
         This project was coded by 
