--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </form>
     </header>
     <main>
+        <div>
     <h1>
         East London
     </h1>
@@ -20,6 +21,8 @@
         Saturday 14:25, Sunny</br>
         Humidity:57%, Wind:32km/h
     </p>
+    </div>
+    <div>☀26°C</div>
     </main>
     <footer>
         This project was coded by 
