--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css"/>
     <title>Document</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
         <form>
             <input type="search" placeholder="Enter your city..." required/>
@@ -31,5 +35,6 @@
         <a href="https://github.com/Samela1209/Isimosezulu" target="_blank"> github</a> and website hosted
         <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general" target="=_blank"> on netlify</a>
     </footer>
+    </div>
 </body>
 </html>
