--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
 <body>
     <div class="weather-app">
     <header>
-        <form>
-            <input type="search" placeholder="Enter your city..." required/>
-            <input type="submit" value="Search"/>
+        <form class="search-form">
+            <input type="search" placeholder="Enter your city..." required class="search-form-input"/>
+            <input type="submit" value="Search" class="search-form-button"/>
         </form>
     </header>
     <main>
+        <div class="weather-app-data">
         <div>
-    <h1>
+    <h1 class="weather-app-city">
         East London
     </h1>
-    <p>
+    <p class="weather-app-details">
         Saturday 14:25, Sunny</br>
-        Humidity:57%, Wind:32km/h
+        Humidity:<strong>57%</strong>, Wind:<strong>32km/h</strong>
     </p>
     </div>
-    <div>☀26°C</div>
-    </main>
+    <div class="weather-app-temperature-container">
+     <div class="weather-app-icon">☀</div>
+     <div class="weather-app-temperature">26</div>
+     <div class="weather-app-unit">°C</div></div>
+    </div>
+</main>
     <footer>
         This project was coded by 
         <a href="https://github.com/Samela1209/" target="_blank"> Samela Mkondweni</a> code hosted on
