--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css"/>
@@ -12,15 +12,15 @@
 <body>
     <div class="weather-app">
     <header>
-        <form class="search-form">
-            <input type="search" placeholder="Enter your city..." required class="search-form-input"/>
+        <form class="search-form" id="search-form">
+            <input type="search" placeholder="Enter your city..." required id="search-form-input" class="search-form-input"/>
             <input type="submit" value="Search" class="search-form-button"/>
         </form>
     </header>
     <main>
         <div class="weather-app-data">
         <div>
-    <h1 class="weather-app-city">
+    <h1 class="weather-app-city" id="city">
         East London
     </h1>
     <p class="weather-app-details">
@@ -41,5 +41,6 @@
         <a href="https://app.netlify.com/sites/isimosezulu-app/configuration/general" target="=_blank"> on netlify</a>
     </footer>
     </div>
+<script src="src/index.js"></script>
 </body>
 </html>
