--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="weather-app-data">
         <div>
     <h1 class="weather-app-city" id="city">
-        East London
+
     </h1>
     <p class="weather-app-details">
         Saturday 14:25, Sunny</br>
@@ -31,7 +31,7 @@
     </div>
     <div class="weather-app-temperature-container">
      <div class="weather-app-icon">☀</div>
-     <div class="weather-app-temperature">26</div>
+     <div class="weather-app-temperature" id="temperature"></div>
      <div class="weather-app-unit">°C</div></div>
     </div>
 </main>
