--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
     </h1>
     <p class="weather-app-details">
-        Saturday 14:25, Sunny</br>
-        Humidity:<strong>57%</strong>, Wind:<strong>32km/h</strong>
+       <span id="time"> </span>, <span id="description">Sunny</span>
+    </br>
+        Humidity:<strong id="humidity"></strong>, Wind:<strong id="wind-speed"></strong>
     </p>
     </div>
     <div class="weather-app-temperature-container">
