Injected the HTML from JavaScript

--- a/index.html
+++ b/index.html
@@ -37,15 +37,8 @@
      <div class="weather-app-unit">°C</div>
     </div>
     </div>
-<div class="weather-forecast">
-    <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Tue</div>
-        <img src="https://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
-            class="weather-forecast-icon" />
-        <div class="weather-forecast-temperature">
-            <span class="weather-forecast-temperature-max"><strong>25°</strong> </span>
-            <span class="weather-forecast-temperature-min">18°</span>
-        </div>
+<div class="weather-forecast" id="forecast">
+   
     </div>
 </main>
     <footer>
