--- a/index.html
+++ b/index.html
@@ -21,27 +21,25 @@
     <main>
         <div class="weather-app-data">
         <div>
-    <h1 class="weather-app-city" id="city">
-
-    </h1>
+    <h1 class="weather-app-city" id="city"></h1>
     <p class="weather-app-details">
-       <span id="time"> </span>, <span id="description">Sunny</span>
+       <span id="time"> </span>, 
+       <span id="description">Sunny</span>
     </br>
-        Humidity:<strong id="humidity"></strong>, Wind:<strong id="wind-speed"></strong>
+        Humidity:<strong id="humidity">
+        </strong>, Wind:<strong id="wind-speed"></strong>
     </p>
     </div>
     <div class="weather-app-temperature-container">
-        <div id="icon">
-        </div>
+        <div id="icon"></div>
      <div class="weather-app-temperature" id="temperature"></div>
      <div class="weather-app-unit">°C</div>
     </div>
     </div>
-<div class="weather-forecast" id="forecast">
-   
-    </div>
+<div class="weather-forecast" id="forecast"></div>
 </main>
-    <footer>
+   
+<footer>
         This project was coded by 
         <a href="https://github.com/Samela1209/" target="_blank"> Samela Mkondweni</a> code hosted on
         <a href="https://github.com/Samela1209/Isimosezulu" target="_blank"> github</a> and website hosted
