--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
      <div class="weather-app-unit">°C</div>
     </div>
     </div>
-<div class="weather-forecast" id="forecast"></div>
+    <div class="weather-forecast" id="forecast"></div>
+</div>
 </main>
    
 <footer>
